[package]
name = "redis_rate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
base32 = "0.4.0"
deadpool-redis = "0.14.0"
futures-util = "0.3.30"
http = "1.0.0"
hyper = "1.1.0"
pin-project = "1.1.4"
rand = "0.8.5"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = "0.5.1"
